--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,6 +28,11 @@ and open the template in the editor.
                 ~Aaron Swartz</p>
             <p>shared by Kelli Miller (kmiller29)</p>
             <br>
+            
+            <p>"Tell me and I forget. Teach me and I remember. Involve me and I learn."
+                ~Benjamin Franklin</p>
+            <p>shared by Lan Tran (lanTranK)</p>
+            <br>
         </div>
      </body>
 </html>
